{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 37,
  "lineage": "47457099-ffc5-4c36-6689-df2351e16581",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0655cec52acf2717b",
            "arn": "arn:aws:ec2:us-east-1:796315862850:instance/i-019b897d879563e3c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-cluster-iam-master-profile1",
            "id": "i-019b897d879563e3c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01fdec79a0ebe065c",
            "private_dns": "ip-10-0-0-4.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.4",
            "public_dns": "ec2-3-80-58-46.compute-1.amazonaws.com",
            "public_ip": "3.80.58.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-066a5cab03e14633d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0633447073804d57d",
            "tags": {
              "Name": "Master",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tags_all": {
              "Name": "Master",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b03033df008b5869"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.k8s_master_profile1",
            "aws_iam_role.k8s_master_role2",
            "aws_key_pair.k8s_key_pair",
            "aws_security_group.k8s_sg",
            "aws_subnet.k8s_subnet",
            "aws_vpc.k8s_vpc",
            "data.aws_ami.ubuntu_22_04",
            "tls_private_key.k8s_ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0655cec52acf2717b",
            "arn": "arn:aws:ec2:us-east-1:796315862850:instance/i-043b00b6ab1cc1c8b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-cluster-iam-worker-profile1",
            "id": "i-043b00b6ab1cc1c8b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c5865858cb2d471b",
            "private_dns": "ip-10-0-0-87.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.87",
            "public_dns": "ec2-3-88-106-172.compute-1.amazonaws.com",
            "public_ip": "3.88.106.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-053e4cd4df345789f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0633447073804d57d",
            "tags": {
              "Name": "Worker-1",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tags_all": {
              "Name": "Worker-1",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05caeecd2b8d07613"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.k8s_master_profile1",
            "aws_iam_instance_profile.k8s_worker_profile1",
            "aws_iam_role.k8s_master_role2",
            "aws_iam_role.k8s_worker_role1",
            "aws_instance.k8s_master",
            "aws_key_pair.k8s_key_pair",
            "aws_security_group.k8s_sg",
            "aws_security_group.k8s_worker_sg",
            "aws_subnet.k8s_subnet",
            "aws_vpc.k8s_vpc",
            "data.aws_ami.ubuntu_22_04",
            "tls_private_key.k8s_ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_worker2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0655cec52acf2717b",
            "arn": "arn:aws:ec2:us-east-1:796315862850:instance/i-083f52fd41758c3f3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-cluster-iam-worker-profile2",
            "id": "i-083f52fd41758c3f3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0093baab0869da279",
            "private_dns": "ip-10-0-0-171.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.171",
            "public_dns": "ec2-52-207-230-222.compute-1.amazonaws.com",
            "public_ip": "52.207.230.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b981b3609e064821",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0633447073804d57d",
            "tags": {
              "Name": "Worker-2",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tags_all": {
              "Name": "Worker-2",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-036edb66543a49f07"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.k8s_master_profile1",
            "aws_iam_instance_profile.k8s_worker_profile1",
            "aws_iam_instance_profile.k8s_worker_profile2",
            "aws_iam_role.k8s_master_role2",
            "aws_iam_role.k8s_worker_role1",
            "aws_iam_role.k8s_worker_role2",
            "aws_instance.k8s_master",
            "aws_instance.k8s_worker",
            "aws_key_pair.k8s_key_pair",
            "aws_security_group.k8s_sg",
            "aws_security_group.k8s_worker2_sg",
            "aws_security_group.k8s_worker_sg",
            "aws_subnet.k8s_subnet",
            "aws_vpc.k8s_vpc",
            "data.aws_ami.ubuntu_22_04",
            "tls_private_key.k8s_ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "k8s_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796315862850:internet-gateway/igw-03b41b84699811681",
            "id": "igw-03b41b84699811681",
            "owner_id": "796315862850",
            "tags": {
              "Name": "K8s-cluster-igw",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tags_all": {
              "Name": "K8s-cluster-igw",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "vpc_id": "vpc-0711ce00f7ede1c4e"
          },
          "dependencies": [
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03b41b84699811681",
            "id": "r-rtb-0d5aa1a957053be8f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d5aa1a957053be8f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.k8s_igw",
            "aws_route_table.k8s_route_table",
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "k8s_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796315862850:route-table/rtb-0d5aa1a957053be8f",
            "id": "rtb-0d5aa1a957053be8f",
            "owner_id": "796315862850",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "K8s-cluster-rtb",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tags_all": {
              "Name": "K8s-cluster-rtb",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0711ce00f7ede1c4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "k8s_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ca91b062d190fd5",
            "route_table_id": "rtb-0d5aa1a957053be8f",
            "subnet_id": "subnet-0633447073804d57d"
          },
          "dependencies": [
            "aws_route_table.k8s_route_table",
            "aws_subnet.k8s_subnet",
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796315862850:security-group/sg-0b03033df008b5869",
            "description": "Security Group for Kubernetes Master Node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b03033df008b5869",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Controller",
                "from_port": 10257,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10257
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubelet API",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubernetes API Server",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Read-Only Kubelet API",
                "from_port": 10255,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10255
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Schedular",
                "from_port": 10259,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10259
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "etcd server client API",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2380
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kube-controller-manager",
                "from_port": 10252,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10252
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kube-scheduler",
                "from_port": 10251,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10251
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "VPC Internal",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "k8s-master-sg",
            "name_prefix": "",
            "owner_id": "796315862850",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-master-sg"
            },
            "tags_all": {
              "Name": "k8s-master-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0711ce00f7ede1c4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_worker2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796315862850:security-group/sg-036edb66543a49f07",
            "description": "Security Group for Kubernetes Worker Node2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036edb66543a49f07",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubelet API",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NodePort Services",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Protocol HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Protocol HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Read-Only Kubelet API",
                "from_port": 10255,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10255
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "VPC Subnet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "k8s-worker2-sg",
            "name_prefix": "",
            "owner_id": "796315862850",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-worker-sg"
            },
            "tags_all": {
              "Name": "k8s-worker-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0711ce00f7ede1c4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_worker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796315862850:security-group/sg-05caeecd2b8d07613",
            "description": "Security Group for Kubernetes Worker Node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05caeecd2b8d07613",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubelet API",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NodePort Services",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Protocol HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Protocol HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Read-Only Kubelet API",
                "from_port": 10255,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10255
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "VPC Subnet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "k8s-worker-sg",
            "name_prefix": "",
            "owner_id": "796315862850",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-worker-sg"
            },
            "tags_all": {
              "Name": "k8s-worker-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0711ce00f7ede1c4e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k8s_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796315862850:subnet/subnet-0633447073804d57d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0633447073804d57d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "796315862850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "K8s-cluster-net",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tags_all": {
              "Name": "K8s-cluster-net",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "vpc_id": "vpc-0711ce00f7ede1c4e"
          },
          "dependencies": [
            "aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "k8s_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796315862850:vpc/vpc-0711ce00f7ede1c4e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-034747a32c002fce1",
            "default_route_table_id": "rtb-0aca8818c3517aa2e",
            "default_security_group_id": "sg-00ee8a13fc4f5fd8c",
            "dhcp_options_id": "dopt-0b5a36737e325a7a0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0711ce00f7ede1c4e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aca8818c3517aa2e",
            "owner_id": "796315862850",
            "tags": {
              "Name": "K8s-cluster-vpc",
              "kubernetes.io/cluster/kubernetes": "owned"
            },
            "tags_all": {
              "Name": "K8s-cluster-vpc",
              "kubernetes.io/cluster/kubernetes": "owned"
            }
          }
        }
      ]
    }
  ]
}